# janus-mobile-sdk

./: .justfile  404.html  Cargo.toml  Package.swift  README.md  index.html  print.html
.github/workflows/: release.yml
android/: build.gradle.kts  settings.gradle.kts
android/buildSrc/src/main/kotlin/: GradleConfig.kt
android/janus/: build.gradle.kts
android/janus/src/main/java/com/proximie/janus/: janus_gateway.kt
apple-tracing-sub/: Cargo.toml  README.md
apple/Sources/JanusGateway/: JanusGatewayBindings.swift
contribution/: architecture.html  contribution.html
docs/: book.toml
docs/src/: 01_release.md
rslib/: Cargo.toml  uniffi.toml
rslib/src/: connection.rs  handle.rs  logger.rs  macros.rs  protocol.rs  session.rs
rslib/src/plugins/: mod.rs
rslib/src/plugins/audiobridge/: handle.rs
rslib/src/plugins/echotest/: handle.rs
rslib/src/plugins/legacy_videoroom/: handle.rs  params.rs  responses.rs
rslib/src/plugins/videoroom/: handle.rs  params.rs  responses.rs
scripts/: validate_version.sh
