[package]
name = "rslib"
version = "0.11.0"
edition = "2024"
publish = false
repository = "https://github.com/Proximie/janus-mobile-sdk"

[lib]
name = "janus_gateway"
crate-type = ["cdylib", "staticlib", "lib"]

# Cargo will log a warn on this, its fine to ignore since the suggested solution (moving it to the root Cargo.toml)
# didn't work. https://github.com/rust-lang/cargo/issues/15262
[profile.release]
opt-level = "z"
lto = "thin"
panic = "abort"
strip = "symbols"

[dependencies]
log = "0.4.22"
log-panics = "2.1.0"
serde = "1.0.217"
serde_json = "1.0.135"
thiserror = "2.0.10"
tokio = "1.43.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uniffi = { workspace = true, features = ["tokio"] }

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
apple-tracing-sub = { version = "*", path = "../apple-tracing-sub" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14.1"
# Newer versions of openssl-sys have a bug that causes the build to fail
openssl-sys = { version = "=0.9.87", features = ["vendored"] }

[dependencies.jarust]
version = "1.3.2"
features = [
    "echo-test-plugin",
    "audio-bridge-plugin",
    "video-room-plugin",
    "ffi-compatible",
    "__plugin-expiremental",
]

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
